docs/examples/configs/ray_kubernetes_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-cluster-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /dashboard(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: raycluster-autoscaler-head-svc
                port:
                  number: 8265
          - path: /serve(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: raycluster-autoscaler-head-svc
                port:
                  number: 8000
